.k8s/apps/calibre-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: calibre-web
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: calibre-web
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: calibre-web
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: calibre-web
      app.kubernetes.io/name: calibre-web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: calibre-web
        app.kubernetes.io/name: calibre-web
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: CWA_PORT_OVERRIDE
              value: '8083'
            - name: NETWORK_SHARE_MODE
              value: 'true'
            - name: PGID
              value: '1000'
            - name: PUID
              value: '1000'
            - name: TZ
              value: America/Sao_Paulo
          image: crocodilestick/calibre-web-automated:latest@sha256:c31a738b6d5ec6982c050063dd3f063b6943eb1051fc81144789f840d9093a8d
          imagePullPolicy: IfNotPresent
          name: main
          ports:
            - containerPort: 8083
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - mountPath: /calibre-library
              name: calibre-library
              subPath: books
            - mountPath: /config
              name: main
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - name: calibre-library
          persistentVolumeClaim:
            claimName: cephfs-shared-storage-root
        - name: main
          persistentVolumeClaim:
            claimName: calibre-web
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.153
    lbipam.cilium.io/sharing-key: calibre-web
  labels:
    app.kubernetes.io/instance: calibre-web
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: calibre-web
    app.kubernetes.io/service: calibre-web
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: calibre-web
  namespace: apps
spec:
  ports:
    - name: http
      port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: calibre-web
    app.kubernetes.io/name: calibre-web
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: calibre-web
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: calibre-web
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: calibre-web
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: calibre.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: calibre-web
                port:
                  number: 8083
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - calibre.josevictor.me
      secretName: wildcard-tls
